# rs-lib-bot

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Procfile  README.md  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: general.yml  scheduled-audit.yml
src/: main.rs  search.rs  util.rs
