[package]
name = "rs-lib-bot"
version = "0.1.0"
authors = ["kiwiyou <kiwiyou.dev@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
tbot = "0.6.5"
tokio = { version = "0.2.22", features = ["macros"] }
sentry = { version = "0.20.1", optional = true }
anyhow = "1.0.32"
sentry-anyhow = { version = "0.20.1", optional = true }
reqwest = { version = "0.10.8", features = ["json"] }
log = "0.4.11"
pretty_env_logger = "0.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.116"
humansize = "1.1.0"
num-format = "0.4.0"
chrono-humanize = "0.1.1"

[features]
default = ["error-report"]
error-report = ["sentry", "sentry-anyhow"]
